@@ -1,3 +1,8 @@
+2003-11-18  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbgtktextbuffer.c (txt_get_text, txt_get_slice): fix memory
+	leaks. Thanks to Hideyasu Yamashita.
+
 2003-11-13  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgtkliststore.c: Add Gtk::ListStore#iter_is_valid?, #reorder, 
